[gd_scene load_steps=25 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Cards/Card.gd" type="Script" id=2]
[ext_resource path="res://Cards/cards.png" type="Texture" id=3]
[ext_resource path="res://Cards/WhiteRect.png" type="Texture" id=4]
[ext_resource path="res://Cards/sheen.png" type="Texture" id=5]
[ext_resource path="res://Cards/Discard.png" type="Texture" id=6]
[ext_resource path="res://m5x7_32.tres" type="DynamicFont" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.929, 118.843 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 540, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 1260, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 1440, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 1620, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 1800, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 1980, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 2160, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 2340, 0, 180, 240 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 2520, 0, 180, 240 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[node name="Card" type="Node2D" groups=[
"card",
]]
script = ExtResource( 2 )

[node name="Highlight" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.454902 )
position = Vector2( 2, -41 )
texture = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1.92899, -41.632 )
texture = ExtResource( 3 )
vframes = 5
hframes = 2

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 3, -84.132 )
texture = ExtResource( 1 )

[node name="Focus2" type="Sprite" parent="."]
modulate = Color( 0, 0.929412, 0.862745, 1 )
position = Vector2( -70.071, -143.843 )
scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.792157 )
margin_left = -81.0
margin_top = -152.0
margin_right = 79.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Cardname"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.792157 )
margin_left = -73.0
margin_top = -36.0
margin_right = 79.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "This text says what the card does"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.792157 )
margin_left = -76.0
margin_top = -151.0
margin_right = -2.0
margin_bottom = -103.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -43 )
shape = SubResource( 1 )

[node name="SheenAnimation" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.541176 )
position = Vector2( 0, -42 )
frames = SubResource( 17 )

[node name="DiscardIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -43 )
texture = ExtResource( 6 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="animation_finished" from="SheenAnimation" to="." method="_on_SheenAnimation_animation_finished"]
